feat: remove guava dependency